--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,35 +1,27 @@
 @import "tailwindcss";
-@import "flowbite/src/themes/default";
-@plugin "flowbite/plugin";
-
+@import "../../node_modules/preline/variants.css";
+@source "../../node_modules/preline/dist/*.js";
 @custom-variant dark (&:where(.dark, .dark *));
-
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
 @source '../**/*.blade.php';
 @source '../**/*.js';
-
 @theme {
     --font-sans: "Instrument Sans", ui-sans-serif, system-ui, sans-serif,
         "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
         "Noto Color Emoji";
 }
-
 @layer base {
     body {
         font-family: var(--font-sans);
     }
 }
-@layer components {
-    .btn {
-        @apply inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
-    }
+
+@theme {
+    --color-primary-50: oklch(97.1% 0.014 343.198);
+    --color-primary-950: oklch(28.4% 0.109 3.907);
 }
-@layer utilities {
-    .content-auto {
-        content-visibility: auto;
-    }
-    .content-hidden {
-        content-visibility: hidden;
-    }
+:root {
+    --color-blue-50: var(--color-primary-50);
+    --color-blue-950: var(--color-primary-950);
 }
